Details
-
Bug
-
Status: Closed
-
Minor
-
Resolution: Fixed
-
None
-
None
-
Patch Available
Description
the following thrift specification generates broken erlang code:
struct invalid
{ /* contents of struct are irrelevent */ }struct Invalid
{ /* still irrelevent }the compiler currently renames any struct that starts with a capital so that it starts with a lowercase letter. instead, it should leave names intact and use proper erlang syntax in generation. the attached patch does exactly that
this does break backwards compatibility