THRIFT-2689: struct names that differ only in capitalization of first character generate broken erlang code

alter generation so that accurate names are retained in generated code